# search-replace

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  check-release.yml  publish.yml  test.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: jupyterlab_search_replace.json  search_replace.json
jupyter-config/server-config/: jupyterlab_search_replace.json  search_replace.json
jupyterlab_search_replace/: __init__.py  handlers.py  log.py  search_engine.py
jupyterlab_search_replace/tests/: conftest.py  schema.json  test_handlers.py  test_search_engine.py
schema/: plugin.json
search_replace/: __init__.py  handlers.py
src/: askBoolean.tsx  handler.ts  icon.ts  index.ts  model.ts  regexReplacer.ts  searchReplace.ts  searchReplace.tsx  searchTable.ts  searchoverlay.tsx  tokens.ts  treetable.ts  view.tsx
style/: base.css
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: breadcrumb.spec.ts  fileFilters.spec.ts  replacePerItem.spec.ts  search.spec.ts
ui-tests/tests/data/: test_handlers.py
